objects/BMCServiceDesk__BMC_StorageExtent__c.object
<CustomObject>
    <fields>
        <fullName>BMCServiceDesk__Available_Capacity__c</fullName>
        <label>Available Capacity</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Block_Size__c</fullName>
        <label>Block Size</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Connection_Type__c</fullName>
        <label>Connection Type</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__InstanceID__c</fullName>
        <label>Instance ID</label>
        <length>38</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Number_Of_Blocks__c</fullName>
        <label>Number Of Blocks</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
</CustomObject>